// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Html5 Player should render correctly 1`] = `
<DocumentFragment>
  <div
    class="widget-video-player-html5-container"
  >
    <div
      class="video-error-label-html5"
    >
      The video failed to load :(
    </div>
    <video
      class="widget-video-player-html5"
      height="100%"
      poster="test"
      preload="metadata"
    >
      <source
        src="test"
        type="video/mp4"
      />
    </video>
  </div>
</DocumentFragment>
`;

exports[`Html5 Player should render correctly in preview mode 1`] = `
<DocumentFragment>
  <div
    class="widget-video-player-html5-container"
  >
    <svg
      class="widget-video-player-preview-play-button"
      fill="none"
      height="48"
      viewBox="0 0 48 48"
      width="48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z"
        fill="#373737"
      />
      <path
        d="M16 12V36L34.8571 24L16 12Z"
        fill="white"
      />
    </svg>
    <video
      class="widget-video-player-html5"
      height="100%"
      poster="test"
      preload="metadata"
    />
  </div>
</DocumentFragment>
`;

exports[`Html5 Player should render correctly with autoplay 1`] = `
<DocumentFragment>
  <div
    class="widget-video-player-html5-container"
  >
    <div
      class="video-error-label-html5"
    >
      The video failed to load :(
    </div>
    <video
      autoplay=""
      class="widget-video-player-html5"
      height="100%"
      poster="test"
      preload="metadata"
    >
      <source
        src="test"
        type="video/mp4"
      />
    </video>
  </div>
</DocumentFragment>
`;

exports[`Html5 Player should render correctly with controls 1`] = `
<DocumentFragment>
  <div
    class="widget-video-player-html5-container widget-video-player-show-controls"
  >
    <div
      class="video-error-label-html5"
    >
      The video failed to load :(
    </div>
    <video
      class="widget-video-player-html5"
      controls=""
      height="100%"
      poster="test"
      preload="metadata"
    >
      <source
        src="test"
        type="video/mp4"
      />
    </video>
  </div>
</DocumentFragment>
`;

exports[`Html5 Player should render correctly with loop 1`] = `
<DocumentFragment>
  <div
    class="widget-video-player-html5-container"
  >
    <div
      class="video-error-label-html5"
    >
      The video failed to load :(
    </div>
    <video
      class="widget-video-player-html5"
      height="100%"
      loop=""
      poster="test"
      preload="metadata"
    >
      <source
        src="test"
        type="video/mp4"
      />
    </video>
  </div>
</DocumentFragment>
`;

exports[`Html5 Player should render correctly with muted 1`] = `
<DocumentFragment>
  <div
    class="widget-video-player-html5-container"
  >
    <div
      class="video-error-label-html5"
    >
      The video failed to load :(
    </div>
    <video
      class="widget-video-player-html5"
      height="100%"
      poster="test"
      preload="metadata"
    >
      <source
        src="test"
        type="video/mp4"
      />
    </video>
  </div>
</DocumentFragment>
`;

exports[`Html5 Player should render correctly with poster 1`] = `
<DocumentFragment>
  <div
    class="widget-video-player-html5-container"
  >
    <div
      class="video-error-label-html5"
    >
      The video failed to load :(
    </div>
    <video
      class="widget-video-player-html5"
      height="100%"
      poster="https://www.mendix.com/wp-content/themes/mendix/ui/images/homepage/air-status-app@2x.png"
      preload="metadata"
    >
      <source
        src="test"
        type="video/mp4"
      />
    </video>
  </div>
</DocumentFragment>
`;

exports[`Html5 Player should render correctly with title 1`] = `
<DocumentFragment>
  <div
    class="widget-video-player-html5-container"
  >
    <div
      class="video-error-label-html5"
    >
      The video failed to load :(
    </div>
    <video
      class="widget-video-player-html5"
      height="100%"
      poster="test"
      preload="metadata"
      title="Sample Video Title"
    >
      <source
        src="test"
        type="video/mp4"
      />
    </video>
  </div>
</DocumentFragment>
`;
